feat: Updated graphic design

--- a/EsameIfoaClient/src/app/back-button/back-button.component.html
+++ b/EsameIfoaClient/src/app/back-button/back-button.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-primary ms-3 d-block mt-3" (click)="goBack()">
+<button type="button" class="btn btn-primary rounded-pill px-5 py-2 fs-5 shadow-sm" (click)="goBack()">
     Torna Indietro
 </button>
